--- a/views/res_partner.xml
+++ b/views/res_partner.xml
@@ -38,6 +38,41 @@
                         </group>
                     </group>
                 </xpath>
+
+                <xpath expr="//notebook" position="inside">
+                    <page string="Visits History">
+                        <field name="visits_history_ids" readonly="1">
+                            <tree create="fasle" edit="false" delete="false">
+                                <field name="date"/>
+                                <field name="create_uid"/>
+                            </tree>
+                            <form create="false" edit="false" delete="false">
+                                <div class="oe_title">
+                                    <label for="date" class="oe_edit_only"/>
+                                    <h3>
+                                        <field name="name" readonly="1"/>
+                                    </h3>
+                                </div>
+                                <group col="1">
+                                    <group col="2">
+                                        <group>
+                                            <field name="date" readonly="1" options="{'no_open': True, 'no_create': True}"/>
+                                        </group>
+                                        <group>
+                                            <field name="partner_id" options="{'no_open': True, 'no_create': True}"/>
+                                        </group>
+                                    </group>
+
+                                    <group col="1">
+                                        <group>
+                                            <field name="notes" options="{'no_open': True, 'no_create': True}"/>
+                                        </group>
+                                    </group>
+                                </group>
+                            </form>
+                        </field>
+                    </page>
+                </xpath>
             </field>
         </record>
     </data>
