--- a/views/res_partner.xml
+++ b/views/res_partner.xml
@@ -24,16 +24,22 @@
                             <group string="Curriculum">
                                 <field name="curriculum_type"/>
                             </group>
-                            <group string="Location">
-                                <field name="latitude"/>
-                                <field name="longitude"/>
-                                <button 
-                                    type="object" 
-                                    class="oe_highlight" 
-                                    title="Show on Map"
-                                    icon="fa-solid fa-globe"
-                                    name="view_school_location"
-                                />
+                            <group string="Location" col="3">
+                                <group>
+                                    <field name="latitude"/>
+                                </group>
+                                <group>
+                                    <field name="longitude"/>
+                                </group>
+                                <group>
+                                    <button 
+                                        type="object" 
+                                        class="oe_highlight" 
+                                        title="Show on Map"
+                                        icon="fa-solid fa-globe"
+                                        name="view_school_location"
+                                    />
+                                </group>
                             </group>
                         </group>
                     </group>
