make arabic name after name

--- a/views/res_partner.xml
+++ b/views/res_partner.xml
@@ -7,7 +7,7 @@
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//form/sheet/div/h1/field" position="after">
+                <xpath expr="//form/sheet/div/h1/field[@id='individual']" position="after">
                     <field name="arabic_name" placeholder="Arabic Name"/>
                 </xpath>
                 <xpath expr="//form/sheet/group" position="after">
